Add integration tests for analytics engine index-level authorization (#5462)